gitops/infrastructure/network-policy-staged/05-load-generator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: load-generator-platform-policy
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: load-generator
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: frontend-proxy
      ports:
        - { protocol: TCP, port: 8080 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: flagd
      ports:
        - { protocol: TCP, port: 8013 }
        - { protocol: TCP, port: 8016 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: otel-gateway
      ports:
        - { protocol: TCP, port: 4317 }
