gitops/infrastructure/network-policy-staged/21-cart.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cart-business-policy
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: cart
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: frontend
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: checkout
      ports:
        - { protocol: TCP, port: 8080 }
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: flagd
      ports:
        - { protocol: TCP, port: 8013 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: otel-gateway
      ports:
        - { protocol: TCP, port: 4317 }
    - to:
        - ipBlock: { cidr: 10.0.0.0/20 }
        - ipBlock: { cidr: 10.0.16.0/20 }
        - ipBlock: { cidr: 10.0.32.0/20 }
      ports:
        - { protocol: TCP, port: 6379 }
