gitops/infrastructure/network-policy-staged/23-fraud-detection.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fraud-detection-business-policy
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: fraud-detection
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: flagd
      ports:
        - { protocol: TCP, port: 8013 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: otel-gateway
      ports:
        - { protocol: TCP, port: 4318 }
    - to:
        - ipBlock: { cidr: 10.0.0.0/20 }
        - ipBlock: { cidr: 10.0.16.0/20 }
        - ipBlock: { cidr: 10.0.32.0/20 }
      ports:
        - { protocol: TCP, port: 9096 }
