gitops/infrastructure/network-policy-staged/34-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-business-policy
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: frontend
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: frontend-proxy
      ports:
        - { protocol: TCP, port: 8080 }
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    - to:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/component
                operator: In
                values:
                  - ad
                  - cart
                  - checkout
                  - currency
                  - product-catalog
                  - recommendation
                  - shipping
      ports:
        - { protocol: TCP, port: 8080 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: product-reviews
      ports:
        - { protocol: TCP, port: 3551 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: flagd
      ports:
        - { protocol: TCP, port: 8013 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: otel-gateway
      ports:
        - { protocol: TCP, port: 4317 }
